welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:2: error: identifier expected but string literal found.
var x:String == "D" ;
                ^